# LocalGrep

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  qa.md  release.md  schema.md  search-syntax.md
scripts/: benchmark.sh
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  main.rs  tests.rs
src-tauri/src/command/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/diagnostics/: mod.rs
src-tauri/src/extractor/: mod.rs
src-tauri/src/index/: mod.rs
src-tauri/src/model/: mod.rs
src-tauri/src/normalizer/: mod.rs
src-tauri/src/preview/: mod.rs
src-tauri/src/query/: mod.rs
src-tauri/src/scanner/: mod.rs
src-tauri/src/scheduler/: mod.rs
src-tauri/src/sql/: 001_init.sql
src-tauri/src/state/: mod.rs
src-tauri/src/util/: logging.rs
src-tauri/src/watcher/: mod.rs
src/app/: App.tsx
src/components/: FilterPanel.tsx  PreviewPanel.tsx  ResultList.tsx  SearchBar.tsx  SettingsPanel.tsx  StatusBar.tsx
src/hooks/: useSearch.test.ts  useSearch.ts
src/pages/: SearchPage.tsx
src/services/: tauriApi.ts
src/styles/: global.css
