[package]
name = "localgrep"
version = "0.1.0"
description = "LocalGrep — local-first cross-platform file search (Tauri + Rust)"
authors = ["ZiHan Wang <wangzh011031@163.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
once_cell = "1"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.22"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri = { version = "2", features = [] }
walkdir = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
